# RP-WCD-pulse-acquire-tools

./: .gitignore  README.md
lcd_bmp/: Makefile  font.h  functions.c  functions.h  lcd_bmp.c
prueba/: Makefile  font.h  functions.c  functions.h  lcd_bmp.c
pulse_acquire/: CMakeLists.txt  CMakeLists.txt~  README.md  bgen.sh  build.h  build_h  config.conf  config.ini  main.c  pacq.c
pulse_acquire/include/: common.h  pa.h  rp_m.h  rpecfm.h  version.h
pulse_acquire/src/: pa.c
scripts/: README.md  ReadPAA-ROOT.C  ReadPAA-python3.py  TestPaaRead.py  paa01.py
